# tsg

./: .gitignore  CMakeLists.txt  README.md  main.cpp  types.h
benchmarks/: new_vs_malloc.cpp
include/tsg/: allocator.h  arena.h  benchmark.h  io.h  leak_detector.cpp  leak_detector.h  logger.cpp  logger.h  math.h  os.cpp  os.h  singleton.h  string.h  tsg.h  types.h
io/: io.cpp  io.h
lessons/: allocator_lesson.cpp  cast_lesson.cpp  comma_operator.cpp  constexpr_lesson.cpp  factorial_lesson.cpp  iterator_lesson.cpp  iteratorable_lesson.cpp  lesson.h  logger_lesson.cpp  main.cpp  ostream_lesson.cpp  pointer_lesson.cpp  pow_lesson.cpp  secret_santa.cpp  singleton_lesson.cpp  string_lesson.cpp  tartaglia_lesson.cpp  test.out  thread_lesson.cpp
math/: math.h
memory/: allocator.h  arena.h  leak_detector.cpp  leak_detector.h  memory_types.h
pattern/: singleton.h
secret_santa_roulette/: secret_santa_roulette.cpp
test/: benchmark.h
tsg/: tsg.sln  tsg.vcxproj
